rebrain/kubernetes/base/15/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: policy-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: your-domain.com  # Замените на ваш домен или IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod-ingress
            port:
              number: 80
